fix: Update workflows to use latest npm provenance and actions
🔧 Workflows
- Add npm provenance flag for package attestation
- Update to softprops/action-gh-release@v2
- Update to actions/cache@v4
- Use Python 3.12 with pip cache
- Add requirements.txt for reproducible builds
- Update permissions for npm publish (contents: write)

📦 Package
- Exclude requirements.txt from npm package

These changes follow npm and GitHub Actions best practices for 2026.

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -9,8 +9,9 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write
+      packages: write
     
     steps:
       - name: Checkout code
@@ -41,13 +42,13 @@ jobs:
         run: |
           npm version ${{ steps.get_version.outputs.VERSION }} --no-git-tag-version
 
-      - name: Publish to npm
-        run: npm publish --access public
+      - name: Publish to npm with provenance
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
