--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,18 +27,19 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.12'
+          cache: 'pip'
 
-      - name: Cache dependencies
-        uses: actions/cache@v3
+      - name: Cache MkDocs dependencies
+        uses: actions/cache@v4
         with:
-          key: ${{ github.ref }}
+          key: mkdocs-${{ hashFiles('mkdocs.yml') }}
           path: .cache
 
       - name: Install MkDocs and dependencies
         run: |
-          pip install mkdocs-material
-          pip install mkdocs
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Build MkDocs site
         run: mkdocs build
